--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.cdnfonts.com/css/monaco');
+@import 'bootstrap/scss/bootstrap';
+
+
+:root {
+	--header-background-color: #222830;
+	--header-text-color: #7B8590;
+	--sidebar-background-color: #222830;
+	--sidebar-icon-color: #45515D;
+	--page-background-color: #222830;
+  }
+
+html, body {
+	margin: 0;
+	padding: 0;
+	background-color: var(--page-background-color);
+	height: 100%;
+	width: 100%;
+}
