--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -47,15 +47,25 @@ aside {
     width: 2.1rem;
   }
 
-  section {
+  ul {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    &:first-child {
-      gap: 1.2rem;
-    }
-    &:last-child {
-      gap: 1.6rem;
-    }
+    justify-content: center;
+    align-items: center;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	li{
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding-top: 0.6rem;
+		padding-bottom: 0.6rem;
+		cursor: pointer;
+	}
+
   }
 }
 
@@ -63,7 +73,13 @@ aside {
   padding: 2rem 0 0 3.5rem;
 }
 
-.tooltip, .tooltip-inner , .bs-tooltip-end{
-	max-width: 500px !important;
-	text-wrap: nowrap !important;
+.tooltip,
+.tooltip-inner,
+.bs-tooltip-end {
+  max-width: 500px !important;
+  text-wrap: nowrap !important;
+}
+
+.active {
+  border-left: 2px solid #5c5fd0;
 }
