--- a/src/app/views/projetos/projetos.component.html
+++ b/src/app/views/projetos/projetos.component.html
@@ -1,1 +1,14 @@
 <app-editor-header [languageIcon]="'java'" [pageName]="'projects.java'" />
+
+<main>
+	<app-line>
+		<span class="title"># Projetos</span>
+	</app-line>
+	<section>
+		@for (item of projects; track $index) {
+			<app-project-card [project]="item" />
+		} @empty {
+			<p>Nenhum projeto encontrado</p>
+		}
+	</section>
+</main>
