--- a/src/app/views/projetos/projetos.component.scss
+++ b/src/app/views/projetos/projetos.component.scss
@@ -1,1 +1,14 @@
 @import "common_area";
+
+// main{
+// 	width: ;
+// 	display: flex;
+// }
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.6rem;
+  margin-top: 2rem;
+  flex-wrap: wrap;
+}
