--- a/src/app/views/sobre/sobre.component.html
+++ b/src/app/views/sobre/sobre.component.html
@@ -1,1 +1,124 @@
 <app-editor-header [languageIcon]="'markdown-light'" [pageName]="'about.md'" />
+
+<main class="codeblock">
+  <app-line>
+    <span class="title"># Sobre Mim</span>
+  </app-line>
+
+  <app-line />
+
+  <app-line>
+    <span class="paragraph">
+      Muito prazer em te conhecer, me chamo Wiris Rafael, trabalho como
+      desenvolvedor full stack a mais de 3 anos e sou apaixonado por tecnologia.
+      Sou formado em Análise e Desenvolvimento de Sistemas pelo Instituto
+      Federal de Educação, Ciência e Tecnologia do Espírito Santo (IFES) e
+      atualmente estou cursando uma pós-graduação em Engenharia de Software;
+    </span>
+  </app-line>
+
+  <app-line />
+
+  <app-line>
+    <span class="paragraph">
+      Minha jornada na programação começou em 2020, quando decidi me aventurar
+      no mundo da tecnologia e desde então venho me aprimorando e aprendendo
+      cada vez mais. Atualmente, tenho me dedicado a estudar e aprimorar meus
+      conhecimentos em tecnologias como Angular, Spring Boot, Node.js, Docker,
+      Kubernetes, React Native, entre outras.
+    </span>
+  </app-line>
+
+  <app-line />
+
+  <app-line>
+    <span class="paragraph">
+      Além disso, sou um entusiasta de metodologias ágeis e práticas de
+      desenvolvimento de software, como TDD, CI/CD, DDD, Clean Code, SOLID,
+      Design Patterns, entre outras. Acredito que a melhor forma de aprender é
+      ensinando, por isso, criei este blog para compartilhar um pouco do que
+      aprendi e aprender com vocês.
+    </span>
+  </app-line>
+
+  <app-line />
+
+  <app-line>
+    <span class="paragraph">
+      Se você quiser entrar em contato comigo, fique a vontade para me enviar um
+      e-mail ou me chamar nas redes sociais. Será um prazer conversar com você!
+    </span>
+  </app-line>
+
+  <app-line />
+
+  <app-line>
+    <span class="title">## Tecnologias</span>
+  </app-line>
+
+  @for (tech of technologies; track $index) {
+	<app-line>
+		<span class="list-item">- {{ tech }}</span>
+	</app-line>
+  }
+
+  <app-line />
+
+  <app-line>
+    <span class="title">## Frameworks</span>
+  </app-line>
+
+  @for (framework of frameworks; track $index) {
+	<app-line>
+		<span class="list-item">- {{ framework }}</span>
+	</app-line>
+  }
+
+  <app-line />
+
+  <app-line>
+    <span class="title">## Bancos de Dados</span>
+  </app-line>
+
+  @for (database of databases; track $index) {
+	<app-line>
+		<span class="list-item">- {{ database }}</span>
+	</app-line>
+  }
+
+  <app-line />
+
+  <app-line>
+    <span class="title">## Cloud</span>
+  </app-line>
+
+  @for (cloud of clouds; track $index) {
+	<app-line>
+		<span class="list-item">- {{ cloud }}</span>
+	</app-line>
+  }
+
+  <app-line />
+
+  <app-line>
+    <span class="title">## Mensageria</span>
+  </app-line>
+
+  @for (messageBroker of messageBrokers; track $index) {
+	<app-line>
+		<span class="list-item">- {{ messageBroker }}</span>
+	</app-line>
+  }
+
+  <app-line />
+
+  <app-line>
+    <span class="title">## Ferramentas</span>
+  </app-line>
+
+  @for (tool of tools; track $index) {
+	<app-line>
+		<span class="list-item">- {{ tool }}</span>
+	</app-line>
+  }
+</main>
