--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.cdnfonts.com/css/monaco');
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import 'bootstrap/scss/bootstrap';
-
+@import 'tech_pills';
+@import 'markdown_style';
 
 :root {
 	--header-background-color: #222830;
