--- a/src/app/views/projetos/projetos.component.scss
+++ b/src/app/views/projetos/projetos.component.scss
@@ -1,9 +1,8 @@
 @import "common_area";
 
-// main{
-// 	width: ;
-// 	display: flex;
-// }
+main{
+	padding-bottom: 2rem;
+}
 section {
   display: flex;
   justify-content: center;
