--- a/src/app/views/projetos/components/project-card/project-card.component.html
+++ b/src/app/views/projetos/components/project-card/project-card.component.html
@@ -1,5 +1,5 @@
-<div class="card" style="width: 18rem">
-  <img [src]="project().thumb" class="card-img-top" alt="..." />
+<div class="card" style="width: 18rem" >
+  <img [src]="project().thumb" class="card-img-top" alt="..." tabindex="" (click)="showPreview()" (keypress)="showPreview()"/>
   <div class="card-body d-flex justify-content-center align-items-center flex-column">
     
 	<section class="w-100 d-flex flex-column">
@@ -15,13 +15,13 @@
 
     <section class="w-100 row gap-2 d-flex justify-content-center align-items-end">
 	@if (project().deploy.trim() !== '') {
-		<a [href]="project().deploy" class="btn btn-deploy col">
+		<a [href]="project().deploy" target="_blank" class="btn btn-deploy col">
 			<img src="icons/Deploy.svg" alt="">
 			Deploy
 		</a>
 	}
 	@if (project().github.trim() !== '') {
-      	<a [href]="project().github" class="btn btn-github col">
+      	<a [href]="project().github" target="_blank" class="btn btn-github col">
 			<img src="icons/Github.svg" alt="">
 			Github
 		</a>
