--- a/src/app/views/social/social.component.html
+++ b/src/app/views/social/social.component.html
@@ -12,51 +12,51 @@
 			<span class="label start-section">.socials</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">youtube</span>
+			<span class="value-gap value-label">youtube</span>
 			<a href="https://www.youtube.com/@wiriswernek" target="_blank" class="value">&#64;wiriswernek</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">github</span>
+			<span class="value-gap value-label">github</span>
 			<a href="https://github.com/WirisWernek" target="_blank" class="value">&#64;wiriswernek</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">instagram</span>
+			<span class="value-gap value-label">instagram</span>
 			<a  href="https://www.instagram.com/wiriswernek/" target="_blank" class="value">&#64;wiriswernek</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">twitch</span>
+			<span class="value-gap value-label">twitch</span>
 			<a href="https://www.twitch.tv/lost905" target="_blank" class="value">&#64;lost905</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">linkedin</span>
+			<span class="value-gap value-label">linkedin</span>
 			<a href="https://www.linkedin.com/in/wiriswernek/" target="_blank" class="value">&#64;wiriswernek</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">email</span>
+			<span class="value-gap value-label">email</span>
 			<a href="mailto:wiriswernek@gmail.com" target="_blank" class="value">wiriswernek&#64;gmail.com</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">whatsapp</span>
-			<a [href]="whatsapp" target="_blank" class="value">(28) 999801-4672</a>
+			<span class="value-gap value-label">whatsapp</span>
+			<a [href]="whatsapp" target="_blank" class="value">vamos_conversar</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">telefone</span>
-			<a href="tel:55289998014672" target="_blank" class="value">(28) 999801-4672</a>
+			<span class="value-gap value-label">telefone</span>
+			<a href="tel:55289998014672" target="_blank" class="value">ligar</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">cartao_de_visitas</span>
+			<span class="value-gap value-label">cartao_de_visitas</span>
 			<a  download="cartao-digital-wiriswernek.pdf" href="files/cartao-de-visitas-interativo.pdf" target="_blank" class="value">baixar_cartao</a>
 		</app-line>
 		<app-line>
-			<span class="value-gap label">contato</span>
+			<span class="value-gap value-label">contato</span>
 			<a href="files/Wiris_Rafael_Januario_Wernek.vcf" target="_blank" class="value">salvar_contato</a>
 			<span class="delimiter">,</span>
 		</app-line>
