--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,12 @@
   --sidebar-background-color: #222830;
   --sidebar-icon-color: #45515d;
   --page-background-color: #222830;
+  --elements-background-primary: #5c5fd0;
+  --elements-background-primary-interaction: #7174cc;
+  --input-background-color: #2d3039;
+
+  --label-color: var(--elements-background-primary);
+  --value-color: #cbe0e8;
 }
 
 html,
