--- a/src/app/shared/components/editor-header/editor-header.component.scss
+++ b/src/app/shared/components/editor-header/editor-header.component.scss
@@ -11,7 +11,7 @@ header {
 	  gap: 0.5rem;
 	  padding: 0.5rem 1rem;
 	  background-color: #222830;
-	  border-top: 0.15rem solid #5c5fd0;
+	  border-top: 0.15rem solid var(--elements-background-primary);
 	}
   }
   
