remove importações desnecessárias e ajusta estilos em componentes; reintroduz importação de "common_area" em styles.scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import "tech_pills";
 @import "markdown_style";
 @import "custom_modal";
+@import "common_area";
 
 :root {
   --header-background-color: #222830;
