adiciona seção de tipografia ao README e implementa estilos de tipografia para títulos e parágrafos; atualiza componentes para usar novos estilos

--- a/public/scss/_markdown_style.scss
+++ b/public/scss/_markdown_style.scss
@@ -1,11 +1,13 @@
 // Titles
 .title {
-	font-size: 1.2rem;
 	font-weight: 700;
 	color: #BE67DD;
 }
 
-// Subtitles
+h1.title{
+	margin-bottom: 1.5rem;
+	padding-left: 2.5rem;
+}
 
 // Paragraphs
 .paragraph {
