--- a/src/app/views/social/social.component.html
+++ b/src/app/views/social/social.component.html
@@ -1,13 +1,9 @@
 <app-editor-header [languageIcon]="'typescript'" [pageName]="'social.ts'" />
 
-<main class="codeblock">
+<main class="codeblock ">
+	<h1 class="title"># Redes Sociais</h1>
+	<div class="d-flex">
 	<section>
-		<app-line>
-			<span class="title"># Redes Sociais</span>
-		</app-line>
-
-		<app-line/>
-
 		<app-line>
 			<span class="label start-section">.socials</span>
 		</app-line>
@@ -89,4 +85,5 @@
 			</div>
 		  </form>
 	</section>
+</div>
 </main>
