--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import "markdown_style";
 @import "custom_modal";
 @import "common_area";
+@import "typography";
 
 :root {
   --header-background-color: #222830;
