--- a/src/app/views/projetos/projetos.component.html
+++ b/src/app/views/projetos/projetos.component.html
@@ -1,9 +1,8 @@
 <app-editor-header [languageIcon]="'java'" [pageName]="'projects.java'" />
 
 <main>
-	<app-line>
-		<span class="title"># Projetos</span>
-	</app-line>
+	<h1 class="title"># Projetos</h1>
+
 	<section>
 		@for (item of projects; track $index) {
 			<app-project-card [project]="item" />
