adiciona novos ícones e implementa o componente de busca; atualiza estilos para responsividade e melhorias na apresentação

--- a/public/scss/_common_area.scss
+++ b/public/scss/_common_area.scss
@@ -4,6 +4,7 @@ main {
   color: royalblue;
   background-color: #222830;
   counter-reset: line;
+  height: 90%;
 
   app-line {
     display: flex;
