--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,30 +1,82 @@
 <app-editor-header [languageIcon]="'html5'" [pageName]="'index.html'" />
 
-<main class="codeblock">
-	<app-line>
-		<span class="label start-section">.socials</span>
-	</app-line>
-	<app-line>
-		<span class="value-gap label">linkedin</span>
-		<span class="value">teste</span>
-	</app-line>
-	<app-line>
-		<span class="value-gap label">github</span>
-		<span class="value">teste</span>
-	</app-line>
-	<app-line>
-		<span class="value-gap label">twitter</span>
-		<span class="value">teste</span>
-	</app-line>
-	<app-line>
-		<span class="value-gap label">email</span>
-		<span class="value">teste</span>
-	</app-line>
-	<app-line>
-		<span class="value-gap label">phone</span>
-		<span class="value">teste</span>
-	</app-line>
-	<app-line>
-		<span class="end-section"></span>
-	</app-line>
+<main class="d-flex align-items-center justify-content-center">
+  <div class="d-flex flex-column justify-content-center h-75 w-50 gap-4">
+    <section>
+      <h1>Wiris Wernek</h1>
+      <h3>Software Developer</h3>
+    </section>
+    <section class="d-flex justify-content-between w-100">
+      <div class="w-50">
+        <h4 class="mb-3">Início</h4>
+        <ul class="short-links">
+          <li>
+            <a href="stacks">
+              <img src="/icons/FolderOpen.svg" alt="" />
+              <p>Stacks</p>
+            </a>
+          </li>
+          <li>
+            <a href="projects">
+              <img src="/icons/Laptop.svg" alt="" />
+              <p>Projetos</p>
+            </a>
+          </li>
+          <li>
+            <a href="about">
+              <img src="/icons/Person.svg" alt="" />
+              <p>Sobre</p>
+            </a>
+          </li>
+          <li>
+            <a href="links">
+              <img src="/icons/Mail.svg" alt="" />
+              <p>Contato</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-50">
+        <h4 class="mb-3">Links</h4>
+        <ul class="card-links">
+          <li>
+            <a href="https://www.linkedin.com/in/wiriswernek/" target="_blank">
+              <img src="/icons/Linkedin.svg" alt="" />
+              <p>Linkedin</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/WirisWernek" target="_blank">
+              <img src="/icons/Github.svg" alt="" />
+              <p>Github</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/wiriswernek/" target="_blank">
+              <img src="/icons/Instagram.svg" alt="" />
+              <p>Instagram</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/@wiriswernek" target="_blank">
+              <img src="/icons/Youtube.svg" alt="" />
+              <p>Youtube</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitch.tv/lost905" target="_blank">
+              <img src="/icons/Twitch.svg" alt="" />
+              <p>Twitch</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://dbc-wiriswernek.vercel.app" target="_blank">
+              <img src="/icons/Contact-Card.svg" alt="" />
+              <p>Cartão Digital</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </div>
 </main>
