--- a/src/app/views/social/social.component.html
+++ b/src/app/views/social/social.component.html
@@ -19,7 +19,7 @@
 		</app-line>
 		<app-line>
 			<span class="value-gap value-label">instagram</span>
-			<a  href="https://www.instagram.com/wiriswernek/" target="_blank" class="value">&#64;wiriswernek</a>
+			<a href="https://www.instagram.com/wiriswernek/" target="_blank" class="value">&#64;wiriswernek</a>
 			<span class="delimiter">,</span>
 		</app-line>
 		<app-line>
@@ -49,7 +49,7 @@
 		</app-line>
 		<app-line>
 			<span class="value-gap value-label">cartao_de_visitas</span>
-			<a  download="cartao-digital-wiriswernek.pdf" href="files/cartao-de-visitas-interativo.pdf" target="_blank" class="value">baixar_cartao</a>
+			<a  download="cartao-digital-wiriswernek.pdf" href="files/cartao-de-visitas-interativo.pdf" target="_blank" class="value">baixar</a>
 		</app-line>
 		<app-line>
 			<span class="value-gap value-label">contato</span>
