--- a/src/app/shared/components/line/line.component.scss
+++ b/src/app/shared/components/line/line.component.scss
@@ -8,3 +8,10 @@ div {
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 768px) {
+	:host {
+		max-width: 95% !important;
+	}
+  }
+  
