adiciona funcionalidade de fechamento ao cabeçalho do editor; atualiza estilos para garantir responsividade e espaçamento adequado

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -52,6 +52,7 @@ main {
 	section:last-child {
 		width: 100% !important;
 		flex-direction: column !important;
+		gap: 1.4rem;
 		& > div {
 			width: 100% !important;
 		}
