--- a/src/app/views/sobre/sobre.component.html
+++ b/src/app/views/sobre/sobre.component.html
@@ -12,8 +12,7 @@
       Muito prazer em te conhecer, me chamo Wiris Rafael, trabalho como
       desenvolvedor full stack a mais de 3 anos e sou apaixonado por tecnologia.
       Sou formado em Análise e Desenvolvimento de Sistemas pelo Instituto
-      Federal de Educação, Ciência e Tecnologia do Espírito Santo (IFES) e
-      atualmente estou cursando uma pós-graduação em Engenharia de Software;
+      Federal de Educação, Ciência e Tecnologia do Espírito Santo (IFES);
     </span>
   </app-line>
 
